Opened 9 years ago
Closed 9 years ago
#12839 closed bug (fixed)
[Patch] headers/private/print/PictureIterator.h: fix header guard spelling
Reported by: | mt | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Kits | Version: | R1/Development |
Keywords: | kits/print | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Fix header guard spelling as clang point out.
In file included from /home/haiku/haiku/haiku/src/kits/print/PicturePrinter.cpp:32: In file included from /home/haiku/haiku/haiku/headers/private/print/PicturePrinter.h:33: /home/haiku/haiku/haiku/headers/private/print/PictureIterator.h:32:9: warning: '_PICTURE_ITERATOR_H' is used as a header guard here, followed by #define of a different macro [-Wheader-guard] #ifndef _PICTURE_ITERATOR_H ^~~~~~~~~~~~~~~~~~~ /home/haiku/haiku/haiku/headers/private/print/PictureIterator.h:33:9: note: '_PICTURE_TIERATOR_H' is defined here; did you mean '_PICTURE_ITERATOR_H'? #define _PICTURE_TIERATOR_H ^~~~~~~~~~~~~~~~~~~ _PICTURE_ITERATOR_H
Attachments (1)
Change History (3)
by , 9 years ago
Attachment: | 0024-PictureIterator.h-fix-header-guard-spelling.patch added |
---|
comment:1 by , 9 years ago
patch: | 0 → 1 |
---|
comment:2 by , 9 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev50402.