PictureIterator.h: fix header guard spelling

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Fixes: #12839